# TradingAgents

./: .env.example  .gitignore  AGENTS.md  README.md  batch_18stocks.json  hs300_tickers.txt  main.py  merge_qlib_data.py  pyproject.toml  qlib_train_backtest.py  run_a_share.py  run_batch.py  start.bat  turnover_screen_results.csv
cli/: AGENTS.md  main.py  utils.py
diagrams/: tradingagents-data-pipeline.puml
docs/: 20-ticker-portfolio-analysis-20260507.docx  market-analysis-20260508.docx  opencli-finance-analysis.md  opencli-finance-prompt-reference.md
scripts/: _share_config.py  batch_20_results.json  batch_20stocks.py  batch_analyze.py  batch_results_A.json  batch_results_B.json  batch_results_C.json  batch_results_D.json  generate_report_from_log.py  merge_results.py  run_a_share.py  run_batch.py  run_single.py  test_datasource.py  test_single_analysis.py  turnover_screener.py
tradingagents/: default_config.py
tradingagents/agents/: AGENTS.md
tradingagents/dataflows/: AGENTS.md  akshare_vendor.py  astock_vendor.py  config.py  guba_vendor.py  interface.py  opencli_vendor.py  rate_limiter.py  stockstats_utils.py  tencent_sina.py  tushare.py  twelve_data.py  utils.py  yfinance_news.py
tradingagents/graph/: AGENTS.md  reflection.py  signal_processing.py  trading_graph.py
tradingagents/llm_clients/: AGENTS.md  base_client.py  model_catalog.py  openai_client.py
tradingagents/qlib/: AGENTS.md  __init__.py  bulk_downloader.py  cache_scanner.py  converter.py  dolt_publisher.py  signal_extractor.py  ta_dolt_publisher.py  ticker_mapper.py
(+13 files in other folders)
