[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.5"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-anthropic>=0.3.15",
    "langchain-core>=0.3.81",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.3.0",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "python-dotenv>=1.0",
    "questionary>=2.1.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "stockstats>=0.6.5",
    "typer>=0.21.0",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
    "python-docx>=1.1.0",
    "akshare>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
